--- a/style.css
+++ b/style.css
@@ -1,64 +1,60 @@
-body {
-font-family: "Inter", sans-serif;
+
+.sidenav {
+    height: 100%; 
+    width: 0; /* javascripttel ezt valtoztatjuk */
+    position: fixed; 
+    z-index: 1; 
+    top: 0; 
+    left: 0;
+    background-color: #111; 
+    overflow-x: hidden;
+    padding-top: 60px; 
+    transition: 0.5s; 
 }
 
-.navbar {
-overflow: hidden;
-background-color: #333;
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
 }
 
-.navbar a {
-float: left;
-font-size: 16px;
-color: white;
-text-align: center;
-padding: 14px 16px;
-text-decoration: none;
+.sidenav a:hover {
+    color: #f1f1f1;
 }
 
-.dropdown {
-float: left;
-overflow: hidden;
+.sidebaropendiv {
+    width: 20px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100vh;
+    overflow-x: hidden;
 }
 
-.dropdown .dropbtn {
-font-size: 16px;  
-border: none;
-outline: none;
-color: white;
-padding: 14px 16px;
-background-color: inherit;
-font-family: inherit;
-margin: 0;
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
 }
 
-.navbar a:hover, .dropdown:hover .dropbtn {
-background-color: red;
+
+main {
+    transition: margin-left .5s;
+    padding: 20px;
 }
 
-.dropdown-content {
-display: none;
-position: absolute;
-background-color: #f9f9f9;
-min-width: 160px;
-box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-z-index: 1;
-}
 
-.dropdown-content a {
-float: none;
-color: black;
-padding: 12px 16px;
-text-decoration: none;
-display: block;
-text-align: left;
-}
+@media screen and (max-height: 450px) {
+    .sidenav {
+        padding-top: 15px;
+    }
 
-.dropdown-content a:hover {
-background-color: #ddd;
-}
-
-.dropdown:hover .dropdown-content {
-display: block;
-}
-/*https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_dropdown_navbar*/
+    .sidenav a {
+        font-size: 18px;
+    }
+} 
