--- a/style.css
+++ b/style.css
@@ -25,13 +25,11 @@
     rotate: 180;
 }
 
-/* Add a black background color to the top navigation */
 .topnav {
-    background-color: #333;
+    background-color: #28528e;
     overflow: hidden;
 }
 
-/* Style the links inside the navigation bar */
 .topnav a {
     float: left;
     display: block;
@@ -42,24 +40,20 @@
     font-size: 17px;
 }
 
-/* Add an active class to highlight the current page */
 .active {
     background-color: #04AA6D;
     color: white;
 }
 
-/* Hide the link that should open and close the topnav on small screens */
 .topnav .icon {
     display: none;
 }
 
-/* Dropdown container - needed to position the dropdown content */
 .dropdown {
     float: left;
     overflow: hidden;
 }
 
-/* Style the dropdown button to fit inside the topnav */
 .dropdown .dropbtn {
     font-size: 17px;
     border: none;
@@ -71,10 +65,9 @@
     margin: 0;
 }
 
-/* Style the dropdown content (hidden by default) */
 #dropdown-content {
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: #28528e;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
@@ -84,7 +77,6 @@
     display: none;
 }
 
-/* Style the links inside the dropdown */
 #dropdown-content a {
     float: none;
     color: black;
@@ -94,22 +86,20 @@
     text-align: left;
 }
 
-/* Add a dark background on topnav links and the dropdown button on hover */
 .topnav a:hover, .dropdown:hover .dropbtn {
-    background-color: #555;
+    background-color: #447cc9;
     color: white;
 }
 
-/* Add a grey background to dropdown links on hover */
 #dropdown-content a:hover {
-    background-color: #ddd;
+    background-color: #447cc9;
     color: black;
 }
 
 
 #dropbtnbtn {
     height: 15px;
-    background-color: rgb(128, 130, 255);
+    background-color: #28528e;
     border-radius: 50%;
     border: 0.5px solid #000;
     margin: 0;
@@ -119,7 +109,6 @@
     left: 3px;
 }
 
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
 @media screen and (max-width: 600px) {
 
     .topnav a:not(:first-child),
@@ -133,7 +122,6 @@
     }
 }
 
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
 @media screen and (max-width: 600px) {
     .topnav.responsive {
         position: relative;
@@ -166,3 +154,78 @@
     }
 }
 
+h1 {
+    font-size: 30px;
+    text-align: center;
+}
+
+.r6bg {
+    background-image: url(images/peter/r6hatter.png);
+}
+
+.arkbg {
+    background-image: url(images/balint/arkhatterblur.png);
+}
+
+body {
+    margin-left: 500px;
+    margin-right: 500px;
+    background-repeat: no-repeat;
+    color: aliceblue;
+}
+
+a {
+    color: #66c0f4;
+    text-decoration: none;
+}
+
+.rightcol {
+    float: right;
+}
+
+.header {
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0, 0.7);
+    color: white;
+    font-weight: bold;
+    border: 3px solid #f1f1f1;
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 55%;
+    padding: 5px;
+    text-align: left;
+}
+
+.rightcol img {
+    height: 151px;
+    width: 324px;
+}
+.rightcol {
+    float: right;
+}
+.leftcol {
+    float: left;
+}
+.below {
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0, 0.7);
+    color: white;
+    font-weight: bold;
+    border: 3px solid #f1f1f1;
+    position: absolute;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 55%;
+    padding: 5px;
+    text-align: left;
+}
+.kepkozep {
+    padding-left: 200px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
