--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
 }
 
 .active {
-    background-color: #04AA6D;
+    background-color: #447cc9;
     color: white;
 }
 
@@ -63,6 +63,7 @@
     background-color: inherit;
     font-family: inherit;
     margin: 0;
+    
 }
 
 #dropdown-content {
@@ -70,7 +71,7 @@
     background-color: #28528e;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
+    
 }
 
 .hide {
@@ -79,11 +80,12 @@
 
 #dropdown-content a {
     float: none;
-    color: black;
+    color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     text-align: left;
+    z-index: 999;
 }
 
 .topnav a:hover, .dropdown:hover .dropbtn {
@@ -93,7 +95,7 @@
 
 #dropdown-content a:hover {
     background-color: #447cc9;
-    color: black;
+    color: white;
 }
 
 
@@ -188,14 +190,14 @@ a {
     background-color: rgba(0,0,0, 0.7);
     color: white;
     font-weight: bold;
-    border: 3px solid #f1f1f1;
+    
     position: absolute;
     top: 35%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 2;
     width: 55%;
-    padding: 5px;
+    padding: 10px;
     text-align: left;
 }
 
@@ -214,18 +216,17 @@ a {
     background-color: rgba(0,0,0, 0.7);
     color: white;
     font-weight: bold;
-    border: 3px solid #f1f1f1;
     position: absolute;
     top: 90%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 2;
     width: 55%;
-    padding: 5px;
+    padding: 10px;
     text-align: left;
 }
 .kepkozep {
-    padding-left: 200px;
+    padding-left: 110px;
     padding-top: 10px;
     padding-bottom: 10px;
 }
