--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 .show {
     display: block !important;
 }
@@ -28,6 +32,14 @@
 .topnav {
     background-color: #28528e;
     overflow: hidden;
+    margin: auto;
+    margin-top: 20px;
+    height: 48px;
+    display: flex;
+    justify-content: space-evenly;
+    text-align: center;
+    padding: 0px 5px 0 5px;
+    width: 700px;
 }
 
 .topnav a {
@@ -67,10 +79,11 @@
 }
 
 #dropdown-content {
-    position: absolute;
+    position: fixed;
+    margin-top: -2px;
     background-color: #28528e;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 8px 16px 0px rgb(0, 0, 0, 0.2);
     
 }
 
@@ -111,51 +124,6 @@
     left: 3px;
 }
 
-@media screen and (max-width: 600px) {
-
-    .topnav a:not(:first-child),
-    .dropdown .dropbtn {
-        display: none;
-    }
-
-    .topnav a.icon {
-        float: right;
-        display: block;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .topnav.responsive {
-        position: relative;
-    }
-
-    .topnav.responsive a.icon {
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-
-    .topnav.responsive a {
-        float: none;
-        display: block;
-        text-align: left;
-    }
-
-    .topnav.responsive .dropdown {
-        float: none;
-    }
-
-    .topnav.responsive #dropdown-content {
-        position: relative;
-    }
-
-    .topnav.responsive .dropdown .dropbtn {
-        display: block;
-        width: 100%;
-        text-align: left;
-    }
-}
-
 h1 {
     font-size: 30px;
     text-align: center;
@@ -170,8 +138,8 @@ h1 {
 }
 
 body {
-    margin-left: 500px;
-    margin-right: 500px;
+    margin-left: auto;
+    margin-right: auto;
     background-repeat: no-repeat;
     color: aliceblue;
 }
@@ -181,52 +149,71 @@ a {
     text-decoration: none;
 }
 
-.rightcol {
-    float: right;
-}
-
 .header {
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0, 0.7);
     color: white;
     font-weight: bold;
-    
-    position: absolute;
-    top: 35%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
-    width: 55%;
+    width: 50%;
     padding: 10px;
-    text-align: left;
+    text-align: center;
+    margin: auto;
+    margin-top: 20px;
+}
+
+.header, .card, .card2 {
+    background-color: rgb(0,0,0);
+    background-color: rgb(0,0,0, 0.7);
 }
 
 .rightcol img {
     height: 151px;
     width: 324px;
 }
+
 .rightcol {
+    display: block;
     float: right;
 }
+
 .leftcol {
+    display: block;
     float: left;
 }
-.below {
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0, 0.7);
+
+.kepkozep {
+    padding: 10px;
+}
+
+.card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: auto;
+    flex-direction: row;
+    gap: 20px;
+    width: 50%;
+    padding: 20px;
+}
+
+.vflex {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    width: 324px;
+}
+
+.card p {
+    padding: 0;
+    margin: 0;
+}
+
+.card2 {
+    margin: auto;
     color: white;
     font-weight: bold;
-    position: absolute;
-    top: 90%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
-    width: 55%;
-    padding: 10px;
-    text-align: left;
-}
-.kepkozep {
-    padding-left: 110px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    width: 50%;
+    padding: 20px;
+    text-align: center;
+    margin-top: 20px;
 }
