--- a/style.css
+++ b/style.css
@@ -7,13 +7,23 @@
 }
 
 @keyframes rotate180 {
-    from {transform: rotate(0);}
-    to {transform: rotate(180deg);}
+    from {
+        transform: rotate(0);
+    }
+
+    to {
+        transform: rotate(180deg);
+    }
 }
 
 @keyframes normal {
-    from {transform: rotate(180deg);}
-    to {transform: rotate(0);}
+    from {
+        transform: rotate(180deg);
+    }
+
+    to {
+        transform: rotate(0);
+    }
 }
 
 .rotate {
@@ -75,23 +85,25 @@
     background-color: inherit;
     font-family: inherit;
     margin: 0;
-    
+
 }
 
-#dropdown-content1, #dropdown-content2 {
+#dropdown-content1,
+#dropdown-content2 {
     position: fixed;
     margin-top: -2px;
     background-color: #28528e;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgb(0, 0, 0, 0.2);
-    
+
 }
 
 .hide {
     display: none;
 }
 
-#dropdown-content1 a, #dropdown-content2 a {
+#dropdown-content1 a,
+#dropdown-content2 a {
     float: none;
     color: white;
     padding: 12px 16px;
@@ -101,7 +113,8 @@
     z-index: 999;
 }
 
-.topnav a:hover, .dropdown:hover .dropbtn {
+.topnav a:hover,
+.dropdown:hover .dropbtn {
     background-color: #447cc9;
     color: white;
 }
@@ -112,7 +125,8 @@
 }
 
 
-#dropbtnbtn1, #dropbtnbtn2 {
+#dropbtnbtn1,
+#dropbtnbtn2 {
     height: 15px;
     background-color: #28528e;
     border-radius: 50%;
@@ -135,6 +149,8 @@ h1 {
 
 .arkbg {
     background-image: url(images/balint/arkhatterblur.png);
+    background-repeat: no-repeat;
+    background-size: 150%;
 }
 
 body {
@@ -159,9 +175,10 @@ a {
     margin-top: 20px;
 }
 
-.header, .card, .card2 {
-    background-color: rgb(0,0,0);
-    background-color: rgb(0,0,0, 0.7);
+.header,
+.card2, .card {
+    background-color: rgb(0, 0, 0);
+    background-color: rgb(0, 0, 0, 0.7);
 }
 
 .rightcol img {
@@ -216,4 +233,63 @@ a {
     padding: 20px;
     text-align: center;
     margin-top: 20px;
+}
+
+.Slides {
+    display: none;
+}
+
+.cursor {
+    cursor: pointer;
+}
+
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 40%;
+    width: auto;
+    padding: 16px;
+    margin-top: -50px;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: none;
+}
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev:hover, .next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.column {
+    float: left;
+    width: 16.66%;
+}
+
+.demo {
+    opacity: 0.6;
+}
+
+.active, .demo:hover {
+    opacity: 1;
 }
