--- a/style.css
+++ b/style.css
@@ -243,30 +243,6 @@ a {
     cursor: pointer;
 }
 
-.prev, .next {
-    cursor: pointer;
-    position: absolute;
-    top: 40%;
-    width: auto;
-    padding: 16px;
-    margin-top: -50px;
-    color: white;
-    font-weight: bold;
-    font-size: 20px;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-    -webkit-user-select: none;
-}
-
-.next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-}
-
-.prev:hover, .next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-}
-
 .numbertext {
     color: #f2f2f2;
     font-size: 12px;
@@ -292,4 +268,8 @@ a {
 
 .active, .demo:hover {
     opacity: 1;
+}
+
+.left {
+    text-align: left;
 }
