--- a/style.css
+++ b/style.css
@@ -5,30 +5,15 @@
 
 .show {
     display: block !important;
+    z-index: 1;
 }
 
-@keyframes rotate180 {
-    from {
-        transform: rotate(0);
-    }
+@keyframes rotate180 {from {transform: rotate(0);} to {transform: rotate(180deg);}}
 
-    to {
-        transform: rotate(180deg);
-    }
-}
-
-@keyframes normal {
-    from {
-        transform: rotate(180deg);
-    }
-
-    to {
-        transform: rotate(0);
-    }
-}
+@keyframes normal {from {transform: rotate(180deg);} to {transform: rotate(0);}}
 
 .rotate {
-    animation-name: rotate180;
+    animation-name: "rotate180";
     animation-duration: 0.3s;
     animation-fill-mode: forwards;
 }
@@ -90,7 +75,7 @@
 }
 
 #dropdown-content1, #dropdown-content2 {
-    position: fixed;
+    position: absolute;
     margin-top: -2px;
     background-color: #28528e;
     min-width: 160px;
@@ -109,7 +94,6 @@
     text-decoration: none;
     display: block;
     text-align: left;
-    z-index: 999;
 }
 
 .topnav a:hover, .dropdown:hover .dropbtn {
@@ -188,7 +172,7 @@ a {
     margin-top: 20px;
 }
 
-.header, .card2, .card {
+.header, .card2, .card, .indexcard {
     background-color: rgb(0, 0, 0);
     background-color: rgb(0, 0, 0, 0.5);
 }
@@ -212,7 +196,7 @@ a {
     padding: 10px;
 }
 
-.card {
+.card, .indexcard {
     display: flex;
     justify-content: center;
     text-align: left;
@@ -231,7 +215,7 @@ a {
     width: 324px;
 }
 
-.card p {
+.card p, .indexcard p {
     padding: 0;
     margin: 0;
 }
@@ -248,6 +232,7 @@ a {
 
 .Slides {
     display: none;
+    position: relative;
 }
 
 .cursor {
@@ -274,39 +259,49 @@ a {
     width: 16.66%;
 }
 
-.activeimg {
-    /* Fixelni az offset issue-t */
-    background-image: url(images/game_highlight_activethumb.png); 
-}
-
 .demo {
     opacity: 0.6;
 }
 
 .active, .demo:hover {
     opacity: 1;
+    display: initial;
 }
 
 .left {
     text-align: left;
 }
 
-.indexmaincard {
-    display: flex;
-    text-align: center;
-    justify-content: center;
-}
-
 .leftswipe {
-    width: 20px;
-    height: 20px;
-    rotate: -90deg;
+    padding: 5px;
+    background-color: rgb(0, 0, 0, 0.4);
+    border-radius: 10px;
+    position: absolute;
+    left: -5px;
+    top: 50%;
+    width: 50px;
+    height: 31.25px;
+    rotate: 90deg;
 }
 
 .rightswipe {
-    width: 20px;
-    height: 20px;
-    rotate: 90deg;
+    padding: 5px;
+    background-color: rgb(0, 0, 0, 0.4);
+    border-radius: 10px;
+    position: absolute;
+    right: -5px;
+    top: 50%;
+    width: 50px;
+    height: 31.25px;
+    rotate: -90deg;
+}
+
+.leftswipe:hover {
+    background-color: rgb(0, 0, 0, 0.6);
+}
+
+.rightswipe:hover {
+    background-color: rgb(0, 0, 0, 0.6);
 }
 
 .center {
